2002-05-17  Dan Dennedy <dan@dennedy.org>
	* apply patch from Daniel Kobras (bug 544185) to fix compile on
	  non-x86 architecture.

2002-05-01  Stefan Lucke <Stefan.Lucke1@epost.de>
	* audio error correction:
	    default error reporting is set to: stderr
	      old_file = dv_set_error_log (decoder, stderr)      
      
	    default correction method is set to: DV_AUDIO_CORRECT_AVERAGE
	      old_method = dv_set_audio_correction (decoder, NEW_METHOD);      
	      NEW_METHOD = DV_AUDIO_CORRECT_NONE |
	                   DV_AUDIO_CORRECT_AVERAGE |
	                   DV_AUDIO_CORRECT_SILENCE
          
	* updated my old invalid email addresses 
  
2002-04-07  Charles 'Buck' Krasic  <krasic@acm.org>
	* Version 0.9.5

	* Build fixups for 0.9.5 release.  For now, stop using an
	  auxiliary directory (was config).  The current release of
	  libtool has a bug where it looks to configure.in for that, which
	  we no longer have, and so it gets terribly confused.  Some
	  changes to bootstrap to get the right versions of autotools.
	  This needs more work.  Autotools sure can be a pain.
	
2002-04-04  Dan Dennedy <dan@dennedy.org>
	* Fix type mismatch in dv_oss_t.arg_audio_device
	
	* Set default playdv audio device to /dev/dsp
	
	* Fix build system to include gtk+ cflags and libs only for playdv

2002-30-03  Dan Dennedy <dan@dennedy.org>
	* Apply bugfix from Peter Schlaile to ppm_copy_ntsc_c block.
	
	* Added reppm.c test utility to test RGB recoding. Recode
	  now tests YUV recoding. Both recode 5 times to evaluate
	  multi-generation loss.
	
	* Apply patch #533329 from Erik Walthinsen to remove glib
	  dependencies in library. Still need to modify build.
	
	* Added new options to disable luma and chroma clamping.
	  The decoder's YUY2 MMX routines do not yet do any 
	  chroma clamping regardless of option.
	
	* Added new options to enable addition and removal of
	  North American NTSC 7.5 IRE setup.
	  
	* Added dv_decoder_free(), dv_reconfigure(), dv_encoder_new(),